# sortcrab

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  cliff.toml  deny.toml  install.sh  sonar-project.properties
.agents/skills/rust/: SKILL.md
.agents/skills/rust-clap/: SKILL.md
.githooks/: commit-msg  pre-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug.yml  2-feature.yml  config.yml
.github/scripts/: lcov_to_sonarqube.py
.github/workflows/: ci.yml  release.yml  sonar.yml
.husky/: pre-commit
.opencode/skills/sortcrab-conventions/: SKILL.md
.sisyphus/evidence/: task-10-all-mover-tests.txt  task-10-basic-move.txt  task-10-collision.txt  task-11-error-display.txt  task-2-deps-build.txt  task-3-ci-jobs.txt  task-3-ci-yaml-valid.txt  task-4-hook-executable.txt  task-5-platforms.txt  task-5-release-yaml.txt  task-6-cliff-config.txt  task-6-config-files.txt  task-7-default-rules-count.txt  task-7-merge-override.txt  task-8-semester-boundary.txt
.sisyphus/notepads/rules-engine/: learnings.md
scripts/: demo.tape  prepare-demo.sh
src/: classify.rs  cli.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  mover.rs  rules.rs  semester.rs
src/cli/: args.rs  display.rs  mod.rs
src/config/: default.toml  mod.rs  rules.rs
src/core/: classify.rs  mod.rs  mover.rs  moving.rs  semester.rs
tests/: integration.rs  proptest.rs
