[package]
name = "sortcrab"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
insta = { version = "1", features = ["yaml", "redactions"] }
proptest = "1"
assert_fs = "1"
predicates = "3"
clap-verbosity-flag = "3"

[profile.release]
strip = true
lto = true
codegen-units = 1
