[package]
name = "sortcrab"
version = "0.1.2"
edition = "2024"
description = "Organize your files into categorized, semester-dated folders"
repository = "https://github.com/meyer-pidiache/sortcrab"
homepage = "https://github.com/meyer-pidiache/sortcrab"
license = "PolyForm-Noncommercial-1.0.0"
keywords = ["file-organization", "sorting", "cli", "file-management"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "6"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
proptest = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
