[package]
name = "sortcrab"
version = "0.1.4"
edition = "2024"
description = "Organize your files into categorized, semester-dated folders"
repository = "https://github.com/meyer-pidiache/sortcrab"
homepage = "https://github.com/meyer-pidiache/sortcrab"
license = "PolyForm-Noncommercial-1.0.0"
keywords = ["file-organization", "sorting", "cli", "file-management"]
categories = ["command-line-utilities"]
include = [
    "src/**/*",
    "tests/**/*",
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE.md",
    "README.md",
]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
directories = "6"
chrono = { version = "0.4", features = ["serde"] }
shellexpand = "3"

[dev-dependencies]
tempfile = "3"
proptest = "1"

[profile.release]
strip = true
lto = true
codegen-units = 1
